src/main/default/objects/Credit_Memo_Item__c/Credit_Memo_Item__c.object-meta.xml
<CustomObject>
    <label>Credit Memo Item</label>
    <nameField>
        <displayFormat>CMI-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Memo Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>