src/main/default/objects/Credit_Memo_Item__c/fields/Catalog_UOM__c.field-meta.xml
<CustomField>
    <fullName>Catalog_UOM__c</fullName>
    <label>Catalog UOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>