src/main/default/objects/Credit_Memo_Item__c/fields/Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo__c</fullName>
    <label>Credit Memo</label>
    <referenceTo>Credit_Memo__c</referenceTo>
    <relationshipLabel>Credit Memo Items</relationshipLabel>
    <relationshipName>Credit_Memo_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>