src/main/default/objects/Credit_Memo_Item__c/fields/Extended_Amount__c.field-meta.xml
<CustomField>
    <fullName>Extended_Amount__c</fullName>
    <formula>Qty__c * Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extended Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>