src/main/default/objects/Credit_Memo_Item__c/fields/Parent_Credit_Memo_Item__c.field-meta.xml
<CustomField>
    <fullName>Parent_Credit_Memo_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Credit Memo Item.</description>
    <label>Parent Credit Memo Item</label>
    <referenceTo>Credit_Memo_Item__c</referenceTo>
    <relationshipLabel>Credit Memo Items</relationshipLabel>
    <relationshipName>Credit_Memo_Items</relationshipName>
    <type>Lookup</type>
</CustomField>