src/main/default/objects/Credit_Memo_Item__c/fields/Price_Book_Item__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book Item</label>
    <referenceTo>Price_Book_Item__c</referenceTo>
    <relationshipLabel>Credit Memo Items</relationshipLabel>
    <relationshipName>Credit_Memo_Items</relationshipName>
    <type>Lookup</type>
</CustomField>